--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,7 +39,7 @@ jobs:
         AWS_S3_ACCESS_KEY: someKey
         AWS_S3_SECRET_KEY: someSecret
         AWS_S3_BUCKET: someBucket
-        CORS_ORIGIN: *
+        CORS_ORIGIN: "*"
 
     - name: Save artifact
       uses: actions/upload-artifact@v3
