--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,5 +49,8 @@ application:
     just-join-it:
       origin: https://justjoin.it
 logging:
+  file:
+    name: logs/app.log
+    path: logs
   pattern:
     console: "%clr(%5p) [%d{HH:mm:ss}] %logger{36} - %msg%n"
