--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -3,6 +3,7 @@ spring:
     mongodb:
       uri: ${MONGO_DB_URI}/it-offers-integration-tests
   jpa:
+    show-sql: false
     hibernate:
       ddl-auto: validate
   flyway:
