--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,27 @@
 version: "3"
 services:
+  sonarqube:
+    image: sonarqube:community
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://sonar-postgresql:5432/sonarqube
+      SONAR_JDBC_USERNAME: admin
+      SONAR_JDBC_PASSWORD: admin
+    depends_on:
+      - sonar-database
+  sonar-database:
+    image: 'postgres:15.2'
+    container_name: sonar-postgresql
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: sonarqube
+    volumes:
+      - sonar-postgresql-volume:/var/lib/postgresql/data
   database:
     image: 'postgres:15.2'
     container_name: it-offers-postgresql
@@ -31,3 +53,4 @@ services:
 
 volumes:
   postgresql-volume: {}
+  sonar-postgresql-volume: {}
