--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       SONAR_JDBC_URL: jdbc:postgresql://sonar-postgresql:5432/sonarqube
       SONAR_JDBC_USERNAME: admin
       SONAR_JDBC_PASSWORD: admin
+      sonar.search.javaOpts: "-Xms2g -Xmx2g"
+      sonar.es.bootstrap.checks.disable: "true"
     depends_on:
       - sonar-database
   sonar-database:
