--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,16 @@
 			<version>3.3.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-reflect</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
