feat(#69): add FreeMaker to the project

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,6 +43,9 @@ spring:
           auth: true
           starttls:
             enable: true
+  freemarker:
+    template-loader-path: classpath:/templates/
+    suffix: .ftl
 jwt:
   token:
     secret: ${JWT_SECRET}
